--- a/static/css/painel.css
+++ b/static/css/painel.css
@@ -117,7 +117,6 @@
     flex-wrap: wrap;
     gap: 1rem;
 }
-
 .search-form {
     display: flex;
     gap: 0.5rem;
@@ -141,4 +140,6 @@
     padding: 0.5rem 1rem 0.5rem 2.5rem;
     border: 1px solid var(--light-gray);
     border-radius: 8px;
+    width: 500px;
 }
+
