--- a/static/css/search.css
+++ b/static/css/search.css
@@ -36,6 +36,7 @@
     padding: 0.5rem 1rem 0.5rem 2.5rem;
     border: 1px solid var(--light-gray);
     border-radius: 8px;
+    width: 500px;
 }
 
 .results-count {
