--- a/static/css/settings.css
+++ b/static/css/settings.css
@@ -39,3 +39,26 @@
 .error-details p:last-child {
     margin-bottom: 0;
 }
+
+.container > * {
+    transform: translateY(30px);
+    animation: fadeInUp 0.5s ease forwards;
+    opacity: 0;
+}
+
+@keyframes fadeInUp {
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+.container > *:nth-child(1) {
+    animation-delay: 0.1s;
+}
+.container > *:nth-child(2) {
+    animation-delay: 0.2s;
+}
+.container > *:nth-child(3) {
+    animation-delay: 0.3s;
+}
+
